# CAGD

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  config.h  util.h
code/B-Spline/: nurbs.cpp
code/bezier/: de_casteljau.cpp  degree_elevation.cpp
code/subdivision/: catmull_clark_subdivision.cpp
config/: config.h.in
note/: 1_bezier.md
